Update user bio and tweet content in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>CoderInTraining</h3>
       </div>
       <div class="user-bio">
-        <em>Bio: </em> Excited future software engineer.
+        <em>Bio: </em> Enthusiastic software engineer.
       </div>
     </div>
     <div class="tweets">
@@ -29,7 +29,7 @@
       </div>
       <div class="tweet">
         <h3>CoderInTraining</h3>
-        <p>Okay, I learned HTML, CSS, and JavaScript. But, how do I combine them together?? Send help.</p>
+        <p>Vue is incredibly flexible</p>
       </div>
       <div class="tweet">
         <h3>CoderInTraining</h3>
