Bind username and tweets to Vue instance in index.html

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     </div>
     <div class="tweets">
       <div class="tweet">
-        <h3>CoderInTraining</h3>
-        <p>Started learning to code today. Wish me luck!</p>
+        <h3>{{ username }}</h3>
+        <p>{{ tweets[0] }}</p>
       </div>
       <div class="tweet">
-        <h3>CoderInTraining</h3>
-        <p>Vue is incredibly flexible</p>
+        <h3>{{ username }}</h3>
+        <p>{{ tweets[1] }}</p>
       </div>
       <div class="tweet">
-        <h3>CoderInTraining</h3>
-        <p>Today I start learning Vue. I got this.</p>
+        <h3>{{ username }}</h3>
+        <p>{{ tweets[2] }}</p>
       </div>
     </div>
     <div class="settings">
