--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h3>CoderInTraining</h3>
       </div>
       <div class="user-bio">
-        <em>Bio: </em> Enthusiastic software engineer.
+        <em>Bio: </em> {{ bio }}
       </div>
     </div>
     <div class="tweets">
